--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -25,8 +25,10 @@ jobs:
         node-version: '16'
     - name: Install dependencies
       run: npm install
+    - name: Prettier
+      run: npm run format
     - name: Lint & fix
-      run: npx eslint ereuse_devicehub --fix --ext .js
+      run: npm lint:fix
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v3
       with:
