--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,8 @@
         "no-new": "warn",
         "strict": "off",
         "class-methods-use-this": "off",
-        "eqeqeq": "warn"
+        "eqeqeq": "warn",
+        "radix": "warn"
     },
     "globals": {
         "API_URLS": true,
