--- a/package.json
+++ b/package.json
@@ -8,108 +8,22 @@
     "example": "examples",
     "test": "tests"
   },
-  "dependencies": {
-    "ajv": "^6.12.6",
-    "array-includes": "^3.1.4",
-    "array.prototype.flat": "^1.3.0",
-    "call-bind": "^1.0.2",
-    "chalk": "^4.1.2",
-    "confusing-browser-globals": "^1.0.11",
-    "cross-spawn": "^7.0.3",
-    "debug": "^4.3.4",
-    "define-properties": "^1.1.4",
-    "doctrine": "^3.0.0",
-    "es-abstract": "^1.19.5",
-    "es-shim-unscopables": "^1.0.0",
-    "es-to-primitive": "^1.2.1",
-    "escape-string-regexp": "^4.0.0",
-    "eslint-import-resolver-node": "^0.3.6",
-    "eslint-module-utils": "^2.7.3",
-    "eslint-scope": "^7.1.1",
-    "eslint-utils": "^3.0.0",
-    "eslint-visitor-keys": "^3.3.0",
-    "espree": "^9.3.1",
-    "esquery": "^1.4.0",
-    "esutils": "^2.0.3",
-    "fast-deep-equal": "^3.1.3",
-    "file-entry-cache": "^6.0.1",
-    "find-up": "^2.1.0",
-    "function-bind": "^1.1.1",
-    "functional-red-black-tree": "^1.0.1",
-    "get-intrinsic": "^1.1.1",
-    "get-symbol-description": "^1.0.0",
-    "glob-parent": "^6.0.2",
-    "globals": "^13.13.0",
-    "has": "^1.0.3",
-    "has-bigints": "^1.0.1",
-    "has-property-descriptors": "^1.0.0",
-    "has-symbols": "^1.0.3",
-    "has-tostringtag": "^1.0.0",
-    "ignore": "^5.2.0",
-    "import-fresh": "^3.3.0",
-    "imurmurhash": "^0.1.4",
-    "internal-slot": "^1.0.3",
-    "is-bigint": "^1.0.4",
-    "is-boolean-object": "^1.1.2",
-    "is-callable": "^1.2.4",
-    "is-core-module": "^2.8.1",
-    "is-date-object": "^1.0.5",
-    "is-glob": "^4.0.3",
-    "is-negative-zero": "^2.0.2",
-    "is-number-object": "^1.0.7",
-    "is-regex": "^1.1.4",
-    "is-shared-array-buffer": "^1.0.2",
-    "is-string": "^1.0.7",
-    "is-symbol": "^1.0.4",
-    "is-weakref": "^1.0.2",
-    "js-yaml": "^4.1.0",
-    "json-stable-stringify-without-jsonify": "^1.0.1",
-    "json5": "^1.0.1",
-    "levn": "^0.4.1",
-    "locate-path": "^2.0.0",
-    "lodash.merge": "^4.6.2",
-    "minimatch": "^3.1.2",
-    "minimist": "^1.2.6",
-    "ms": "^2.1.3",
-    "natural-compare": "^1.4.0",
-    "object-inspect": "^1.12.0",
-    "object-keys": "^1.1.1",
-    "object.assign": "^4.1.2",
-    "object.entries": "^1.1.5",
-    "object.values": "^1.1.5",
-    "optionator": "^0.9.1",
-    "p-limit": "^1.3.0",
-    "p-locate": "^2.0.0",
-    "p-try": "^1.0.0",
-    "path-exists": "^3.0.0",
-    "path-parse": "^1.0.7",
-    "prettier": "^2.6.2",
-    "regexpp": "^3.2.0",
-    "resolve": "^1.22.0",
-    "semver": "^6.3.0",
-    "side-channel": "^1.0.4",
-    "string.prototype.trimend": "^1.0.4",
-    "string.prototype.trimstart": "^1.0.4",
-    "strip-ansi": "^6.0.1",
-    "strip-bom": "^3.0.0",
-    "strip-json-comments": "^3.1.1",
-    "supports-preserve-symlinks-flag": "^1.0.0",
-    "text-table": "^0.2.0",
-    "tsconfig-paths": "^3.14.1",
-    "unbox-primitive": "^1.0.1",
-    "v8-compile-cache": "^2.3.0",
-    "which-boxed-primitive": "^1.0.2"
-  },
   "devDependencies": {
     "eslint": "^8.13.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0"
   },
   "scripts": {
-    "lint": "eslint --ext .js ereuse_devicehub",
-    "lint:fix": "eslint --ext .js ereuse_devicehub --fix"
+    "lint:fix": "eslint ereuse_devicehub --ext .js --fix"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0"
+  }
 }
