--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -24,12 +24,12 @@ jobs:
       with:
         node-version: '16'
     - name: Install dependencies
-      run: npm install
+      run: yarn
     - name: Save Code Linting Report JSON
       # npm script for ESLint
       # eslint --output-file eslint_report.json --format json src
       # See https://eslint.org/docs/user-guide/command-line-interface#options
-      run: npm run lint:report
+      run: yarn lint:report
       # Continue to the next step even if this fails
       continue-on-error: true
     - name: Annotate Code Linting Results
