--- a/ereuse_devicehub/templates/workbench/wbSettings.ini
+++ b/ereuse_devicehub/templates/workbench/wbSettings.ini
@@ -1,18 +1,4 @@
 [settings]
 
-DH_TOKEN = {{token}}
-
-DH_HOST = {{host}}
-DH_DATABASE = {{inventory}}
-DEVICEHUB_URL = https://${DB_HOST}/${DB_DATABASE}/
-
-
-WB_BENCHMARK = {{ benchmark }}
-WB_STRESS_TEST = {{ stress_test }}
-WB_SMART_TEST = short
-
-WB_ERASE = {{ erase }}
-WB_ERASE_STEPS = {{ steps }}
-WB_ERASE_LEADING_ZEROS = {{ leading_zeros }}
-
-WB_DEBUG = True
+TOKEN = {{ token }}
+URL = {{ url }}
