--- a/.github/workflows/flask.yml
+++ b/.github/workflows/flask.yml
@@ -49,6 +49,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest coverage
         pip install -r requirements.txt
+        pip install -e .
         mkdir bin
         wget https://github.com/mozilla/geckodriver/releases/download/v0.30.0/geckodriver-v0.30.0-linux64.tar.gz
         tar xf geckodriver-v0.30.0-linux64.tar.gz -C bin/
