--- a/.github/workflows/flask.yml
+++ b/.github/workflows/flask.yml
@@ -70,6 +70,7 @@ jobs:
       env:
         SECRET_KEY: 'f00046306835001b55c230092e3a7990485beda0bc3bf732088d1ba1b5b74110e22e3f9ec3a24890272554b37d4'
         DB_DATABASE: dh_test
+        FLASK_APP: examples/app.py
         dhi: dbtest
       run: |
         alembic -x inventory=dbtest upgrade head
