--- a/requirements.txt
+++ b/requirements.txt
@@ -47,10 +47,10 @@ pyjwt==2.4.0
 pint==0.9
 py-dmidecode==0.1.0
 pandas==1.3.5
-numpy==1.22.0
-odfpy==1.4.1
-xlrd==2.0.1
-openpyxl==3.0.10
-et_xmlfile==1.1.0
+numpy==1.22.0   # pandas dependency
+odfpy==1.4.1   # pandas dependency
+xlrd==2.0.1   # pandas dependency
+openpyxl==3.0.10   # pandas dependency
+et_xmlfile==1.1.0   # pandas dependency
 sentry_sdk==1.6.0
 blinker==1.4
