Move selenium to requirements-dev.txt
and update actions to install dependencies from this file.

--- a/.github/workflows/flask.yml
+++ b/.github/workflows/flask.yml
@@ -47,7 +47,7 @@ jobs:
         sudo apt-get update -qy
         sudo apt-get -y install postgresql-client --no-install-recommends
         python -m pip install --upgrade pip
-        pip install flake8 pytest coverage
+        pip install -r requirements-dev.txt
         pip install -r requirements.txt
 
     - name: Prepare database
