add v14 iso for download erease settings

--- a/ereuse_devicehub/templates/workbench/wbSettings.ini
+++ b/ereuse_devicehub/templates/workbench/wbSettings.ini
@@ -2,3 +2,9 @@
 
 DH_TOKEN = {{ token }}
 DH_URL = {{ url }}
+{% if erease_basic %}
+EREASE_BASIC = True
+{% endif %}
+{% if erease_sectors %}
+EREASE_SECTORS = True
+{% endif %}
