template for erase wb 14

--- a/ereuse_devicehub/templates/workbench/wbSettings.ini
+++ b/ereuse_devicehub/templates/workbench/wbSettings.ini
@@ -3,8 +3,24 @@
 DH_TOKEN = {{ token }}
 DH_URL = {{ url }}
 {% if erease_basic %}
-EREASE_BASIC = True
+WB_BENCHMARK = True
+WB_STRESS_TEST = 0
+WB_SMART_TEST = short
+
+WB_ERASE = EraseBasic
+WB_ERASE_STEPS = 1
+WB_ERASE_LEADING_ZEROS = False
+
+WB_DEBUG = True
 {% endif %}
 {% if erease_sectors %}
-EREASE_SECTORS = True
+WB_BENCHMARK = True
+WB_STRESS_TEST = 0
+WB_SMART_TEST = short
+
+WB_ERASE = EraseSectors
+WB_ERASE_STEPS = 1
+WB_ERASE_LEADING_ZEROS = True
+
+WB_DEBUG = True
 {% endif %}
