modify template wb

--- a/ereuse_devicehub/templates/workbench/wbSettings.ini
+++ b/ereuse_devicehub/templates/workbench/wbSettings.ini
@@ -3,6 +3,10 @@
 DH_TOKEN = {{ token }}
 DH_URL = {{ url }}
 {% if erease_basic %}
+DH_HOST = {{ host }}
+DH_DATABASE = {{ schema }}
+DEVICEHUB_URL = https://${DB_HOST}/${DB_DATABASE}/
+
 WB_BENCHMARK = True
 WB_STRESS_TEST = 0
 WB_SMART_TEST = short
@@ -14,6 +18,10 @@ WB_ERASE_LEADING_ZEROS = False
 WB_DEBUG = True
 {% endif %}
 {% if erease_sectors %}
+DH_HOST = {{ host }}
+DH_DATABASE = {{ schema }}
+DEVICEHUB_URL = https://${DB_HOST}/${DB_DATABASE}/
+
 WB_BENCHMARK = True
 WB_STRESS_TEST = 0
 WB_SMART_TEST = short
