add test for erasure list view

--- a/tests/files/erase-sectors-2-hdd.snapshot.yaml
+++ b/tests/files/erase-sectors-2-hdd.snapshot.yaml
@@ -1,9 +1,9 @@
 {
   "version": "11.0a3",
   "device": {
-    "serialNumber": 'foo',
-    "manufacturer": 'bar',
-    "model": 'baz',
+    "serialNumber": "foo",
+    "manufacturer": "bar",
+    "model": "baz",
     "type": "Desktop",
     "actions": [],
     "chassis": "Tower"
