--- a/requirements.txt
+++ b/requirements.txt
@@ -108,9 +108,7 @@ markupsafe==2.1.1
     #   jinja2
     #   mako
     #   wtforms
-# TODO fix https://github.com/marshmallow-code/marshmallow/issues/1040
-# A ValueError is raised when the missing parameter is passed for required fields (#1040).
-marshmallow==3.0.0rc1
+marshmallow==3.0.0b11
     # via
     #   marshmallow-enum
     #   teal
@@ -127,8 +125,6 @@ odfpy==1.4.1
     # via -r requirements.in
 openpyxl==3.0.10
     # via -r requirements.in
-packaging==21.3
-    # via marshmallow
 pandas==1.3.5
     # via -r requirements.in
 passlib==1.7.1
@@ -151,8 +147,6 @@ pycparser==2.21
     # via cffi
 pyjwt==2.4.0
     # via -r requirements.in
-pyparsing==3.0.9
-    # via packaging
 pyphen==0.13.0
     # via weasyprint
 python-dateutil==2.7.3
@@ -206,7 +200,7 @@ sqlalchemy-utils[color,password,phone]==0.33.11
     # via
     #   -r requirements.in
     #   teal
-teal==0.2.0a40
+teal==0.2.0a41
     # via -r requirements.in
 tinycss2==1.1.1
     # via
