--- a/requirements.in
+++ b/requirements.in
@@ -24,7 +24,7 @@ requests-toolbelt==0.9.1
 sortedcontainers==2.1.0
 sqlalchemy-citext==1.3.post0
 sqlalchemy-utils==0.33.11
-teal==0.2.0a41
+teal==0.2.0a38
 tqdm==4.32.2
 
 pint==0.9
@@ -35,3 +35,6 @@ odfpy==1.4.1 # pandas dependency
 xlrd==2.0.1 # pandas dependency
 openpyxl==3.0.10 # pandas dependency
 et_xmlfile==1.1.0 # pandas dependency
+
+# manual dependency
+marshmallow-enum==1.4.1
