--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,7 @@ alembic==1.4.2
     # via -r requirements.in
 anytree==2.4.3
     # via teal
-apispec==4.5.0
-    # via
-    #   apispec-webframeworks
-    #   teal
-apispec-webframeworks==0.5.2
+apispec==0.39.0
     # via teal
 atomicwrites==1.4.0
     # via -r requirements.in
@@ -114,7 +110,7 @@ marshmallow==3.0.0b11
     #   teal
     #   webargs
 marshmallow-enum==1.4.1
-    # via teal
+    # via -r requirements.in
 more-itertools==8.12.0
     # via -r requirements.in
 numpy==1.22.0
@@ -200,7 +196,7 @@ sqlalchemy-utils[color,password,phone]==0.33.11
     # via
     #   -r requirements.in
     #   teal
-teal==0.2.0a41
+teal==0.2.0a38
     # via -r requirements.in
 tinycss2==1.1.1
     # via
@@ -223,9 +219,7 @@ webencodings==0.5.1
     #   html5lib
     #   tinycss2
 werkzeug==2.0.3
-    # via
-    #   flask
-    #   teal
+    # via flask
 wtforms==3.0.1
     # via flask-wtf
 xlrd==2.0.1
