Fix build-js pre-commit hook
Only run when main_inventory is run & discard parameters
passed by pre-commit which breaks babel command

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,5 +19,9 @@ repos:
     hooks:
     -   id: build-js
         name: build-js
+        # pre-commit pass as parameters files included on the commit
+        # so babel command should be wrapped to ignore these files on
+        # package.json script
         entry: npm run babel
         language: node
+        files: ^ereuse_devicehub/static/js/main_inventory.js
