--- a/requirements.in
+++ b/requirements.in
@@ -27,6 +27,7 @@ sqlalchemy-utils==0.33.11
 teal==0.2.0a38
 tqdm==4.32.2
 
+# workbench json parsing dependencies
 pint==0.9
 py-dmidecode==0.1.0
 pandas==1.3.5
