add template for Enhanced Secure Erasure

--- a/ereuse_devicehub/templates/workbench/wbSettings.ini
+++ b/ereuse_devicehub/templates/workbench/wbSettings.ini
@@ -16,8 +16,7 @@ WB_ERASE_STEPS = 1
 WB_ERASE_LEADING_ZEROS = False
 
 WB_DEBUG = True
-{% endif %}
-{% if erease_sectors %}
+{% elif baseline_erease %}
 DH_HOST = {{ host }}
 DH_DATABASE = {{ schema }}
 DEVICEHUB_URL = https://${DB_HOST}/${DB_DATABASE}/
@@ -27,7 +26,7 @@ WB_STRESS_TEST = 0
 WB_SMART_TEST = short
 
 WB_ERASE = EraseSectors
-WB_ERASE_STEPS = 1
+WB_ERASE_STEPS = {{ erase_steps }}
 WB_ERASE_LEADING_ZEROS = True
 
 WB_DEBUG = True
