add version in settings

--- a/ereuse_devicehub/templates/workbench/wbSettings.ini
+++ b/ereuse_devicehub/templates/workbench/wbSettings.ini
@@ -2,6 +2,7 @@
 
 DH_TOKEN = {{ token }}
 DH_URL = {{ url }}
+VERSION = {{ version }}
 {% if erease_basic %}
 DH_HOST = {{ host }}
 DH_DATABASE = {{ schema }}
