--- a/ereuse_devicehub/templates/workbench/wbSettings.ini
+++ b/ereuse_devicehub/templates/workbench/wbSettings.ini
@@ -2,7 +2,6 @@
 
 DH_TOKEN = {{ token }}
 DH_URL = {{ url }}
-VERSION = {{ version }}
 {% if erease_basic %}
 DH_HOST = {{ host }}
 DH_DATABASE = {{ schema }}
@@ -32,3 +31,4 @@ WB_ERASE_LEADING_ZEROS = True
 
 WB_DEBUG = True
 {% endif %}
+VERSION = "{{ version }}"
