--- a/ereuse_devicehub/templates/workbench/wbSettings.ini
+++ b/ereuse_devicehub/templates/workbench/wbSettings.ini
@@ -3,7 +3,7 @@
 DH_TOKEN = {{ token }}
 DH_URL = {{ url }}
 {% if erease_basic %}
-DH_HOST = {{ host }}
+DH_HOST = {{ api_host }}
 DH_DATABASE = {{ schema }}
 DEVICEHUB_URL = https://${DB_HOST}/${DB_DATABASE}/
 
@@ -17,7 +17,7 @@ WB_ERASE_LEADING_ZEROS = False
 
 WB_DEBUG = True
 {% elif baseline_erease %}
-DH_HOST = {{ host }}
+DH_HOST = {{ api_host }}
 DH_DATABASE = {{ schema }}
 DEVICEHUB_URL = https://${DB_HOST}/${DB_DATABASE}/
 
