--- a/ereuse_devicehub/templates/workbench/wbSettings.ini
+++ b/ereuse_devicehub/templates/workbench/wbSettings.ini
@@ -14,8 +14,8 @@ WB_SMART_TEST = short
 WB_ERASE = EraseBasic
 WB_ERASE_STEPS = 1
 WB_ERASE_LEADING_ZEROS = False
+VERSION = "Basic Erasure"
 
-WB_DEBUG = True
 {% elif baseline_erease %}
 DH_HOST = {{ api_host }}
 DH_DATABASE = {{ schema }}
@@ -28,6 +28,11 @@ WB_SMART_TEST = short
 WB_ERASE = EraseSectors
 WB_ERASE_STEPS = {{ erase_steps }}
 WB_ERASE_LEADING_ZEROS = True
+VERSION = {%if erase_steps < 3 %}"Baseline Secure Erasure"{% else %}"Enhanced Secure Erasure"{% endif %}
 
-WB_DEBUG = True
+{% else %}
+SNAPSHOTS_PATH = /mnt
+LOGS_PATH = /mnt
+VERSION = "Basic Metadata"
+
 {% endif %}
