--- a/ereuse_devicehub/dummy/files/real-eee-1001pxd.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/real-eee-1001pxd.snapshot.11.yaml
@@ -158,5 +158,6 @@
     }
     ]
   },
+  "debug": {"lshw": {"configuration": {"uuid": "a0cef731-9a78-4087-889c-dfb6ba5c2e9b"}}},
   "closed": false
 }
