disable WB_BENCHMARK in wb settings

--- a/ereuse_devicehub/templates/workbench/wbSettings.ini
+++ b/ereuse_devicehub/templates/workbench/wbSettings.ini
@@ -7,7 +7,7 @@ DH_HOST = {{ api_host }}
 DH_DATABASE = {{ schema }}
 DEVICEHUB_URL = https://${DB_HOST}/${DB_DATABASE}/
 
-WB_BENCHMARK = True
+WB_BENCHMARK = False
 WB_STRESS_TEST = 0
 WB_SMART_TEST = short
 
@@ -21,7 +21,7 @@ DH_HOST = {{ api_host }}
 DH_DATABASE = {{ schema }}
 DEVICEHUB_URL = https://${DB_HOST}/${DB_DATABASE}/
 
-WB_BENCHMARK = True
+WB_BENCHMARK = False
 WB_STRESS_TEST = 0
 WB_SMART_TEST = short
 
