--- a/requirements.txt
+++ b/requirements.txt
@@ -6,18 +6,20 @@
 #
 alembic==1.4.2
     # via -r requirements.in
-anytree==2.4.3
-    # via teal
-apispec==0.39.0
-    # via teal
+anytree==2.8.0
+    # via -r requirements.in
+apispec[yaml]==6.3.0
+    # via
+    #   -r requirements.in
+    #   apispec-webframeworks
+apispec-webframeworks==0.5.2
+    # via -r requirements.in
 atomicwrites==1.4.0
     # via -r requirements.in
 blinker==1.5
     # via -r requirements.in
-boltons==18.0.1
-    # via
-    #   ereuse-utils
-    #   teal
+boltons==23.0.0
+    # via -r requirements.in
 cairocffi==1.4.0
     # via
     #   cairosvg
@@ -33,21 +35,13 @@ cffi==1.15.1
 charset-normalizer==2.0.12
     # via requests
 click==6.7
-    # via
-    #   ereuse-utils
-    #   flask
+    # via flask
 click-spinner==0.1.8
-    # via
-    #   -r requirements.in
-    #   teal
+    # via -r requirements.in
 colorama==0.3.9
-    # via
-    #   -r requirements.in
-    #   ereuse-utils
+    # via -r requirements.in
 colour==0.1.5
-    # via
-    #   -r requirements.in
-    #   sqlalchemy-utils
+    # via -r requirements.in
 cssselect2==0.7.0
     # via
     #   cairosvg
@@ -56,31 +50,23 @@ defusedxml==0.7.1
     # via
     #   cairosvg
     #   odfpy
-ereuse-utils[cli,naming,session,test]==0.4.0b50
-    # via
-    #   -r requirements.in
-    #   teal
 et-xmlfile==1.1.0
     # via
     #   -r requirements.in
     #   openpyxl
 flask==1.0.2
     # via
-    #   ereuse-utils
     #   flask-cors
     #   flask-login
     #   flask-sqlalchemy
     #   flask-weasyprint
     #   flask-wtf
-    #   teal
 flask-cors==3.0.10
-    # via
-    #   -r requirements.in
-    #   teal
+    # via -r requirements.in
 flask-login==0.5.0
     # via -r requirements.in
 flask-sqlalchemy==2.5.1
-    # via teal
+    # via -r requirements.in
 flask-weasyprint==0.4
     # via -r requirements.in
 flask-wtf==1.0.0
@@ -91,8 +77,8 @@ html5lib==1.1
     # via weasyprint
 idna==3.4
     # via requests
-inflection==0.3.1
-    # via ereuse-utils
+inflection==0.5.1
+    # via -r requirements.in
 itsdangerous==2.0.1
     # via
     #   flask
@@ -106,12 +92,12 @@ markupsafe==2.1.1
     #   jinja2
     #   mako
     #   wtforms
-marshmallow==3.0.0b11
+marshmallow==3.0.0
     # via
+    #   -r requirements.in
     #   marshmallow-enum
-    #   teal
     #   webargs
-marshmallow-enum==1.4.1
+marshmallow-enum==1.5.1
     # via -r requirements.in
 more-itertools==8.12.0
     # via -r requirements.in
@@ -123,16 +109,16 @@ odfpy==1.4.1
     # via -r requirements.in
 openpyxl==3.0.10
     # via -r requirements.in
+packaging==23.0
+    # via
+    #   apispec
+    #   webargs
 pandas==1.3.5
     # via -r requirements.in
 passlib==1.7.1
-    # via
-    #   -r requirements.in
-    #   sqlalchemy-utils
+    # via -r requirements.in
 phonenumbers==8.9.11
-    # via
-    #   -r requirements.in
-    #   sqlalchemy-utils
+    # via -r requirements.in
 pillow==9.2.0
     # via cairosvg
 pint==0.9
@@ -173,9 +159,7 @@ requests==2.27.1
 requests-mock==1.5.2
     # via -r requirements.in
 requests-toolbelt==0.9.1
-    # via
-    #   -r requirements.in
-    #   ereuse-utils
+    # via -r requirements.in
 six==1.16.0
     # via
     #   anytree
@@ -194,11 +178,7 @@ sqlalchemy==1.3.24
     #   sqlalchemy-utils
 sqlalchemy-citext==1.3.post0
     # via -r requirements.in
-sqlalchemy-utils[color,password,phone]==0.33.11
-    # via
-    #   -r requirements.in
-    #   teal
-teal==0.2.0a38
+sqlalchemy-utils==0.33.11
     # via -r requirements.in
 tinycss2==1.1.1
     # via
@@ -206,22 +186,22 @@ tinycss2==1.1.1
     #   cssselect2
     #   weasyprint
 tqdm==4.32.2
-    # via
-    #   -r requirements.in
-    #   ereuse-utils
+    # via -r requirements.in
 urllib3==1.26.12
     # via requests
 weasyprint==44
     # via flask-weasyprint
-webargs==5.5.3
-    # via teal
+webargs==8.2.0
+    # via -r requirements.in
 webencodings==0.5.1
     # via
     #   cssselect2
     #   html5lib
     #   tinycss2
 werkzeug==2.0.3
-    # via flask
+    # via
+    #   -r requirements.in
+    #   flask
 wtforms==3.0.1
     # via flask-wtf
 xlrd==2.0.1
