--- a/requirements.in
+++ b/requirements.in
@@ -3,7 +3,6 @@ atomicwrites==1.4.0
 click-spinner==0.1.8
 colorama==0.3.9
 colour==0.1.5
-ereuse-utils[naming,test,session,cli]==0.4.0b50
 Flask-Cors==3.0.10
 Flask-Login==0.5.0
 Flask-WTF==1.0.0
@@ -24,7 +23,6 @@ requests-toolbelt==0.9.1
 sortedcontainers==2.1.0
 sqlalchemy-citext==1.3.post0
 sqlalchemy-utils==0.33.11
-teal==0.2.0a38
 tqdm==4.32.2
 
 # workbench json parsing dependencies
@@ -37,8 +35,19 @@ xlrd==2.0.1 # pandas dependency
 openpyxl==3.0.10 # pandas dependency
 et_xmlfile==1.1.0 # pandas dependency
 
-# manual dependency
-marshmallow-enum==1.4.1
-
 # flask_mail dependency
 blinker==1.5
+
+# teal dependency
+anytree==2.8.0
+apispec==0.39.0
+# apispec-webframeworks==0.5.2
+boltons==23.0.0
+flask-sqlalchemy>=2.5.1
+marshmallow==3.0.0b11
+marshmallow-enum==1.4.1
+webargs==5.5.3
+Werkzeug>=2.0.3
+
+# ereuse-utils dependency
+inflection==0.5.1
