--- a/ereuse_devicehub/templates/workbench/wbSettings_BSE.ini
+++ b/ereuse_devicehub/templates/workbench/wbSettings_BSE.ini
@@ -14,6 +14,8 @@ WB_ERASE = EraseSectors
 WB_ERASE_STEPS = 1
 WB_ERASE_LEADING_ZEROS = True
 
+#WB_ERASE_CONFIRMATION = True
+
 WB_ERASE_1_METHOD = EraseBasic
 WB_ERASE_1_STEP_TYPE = 0
 WB_ERASE_2_METHOD = EraseSectors
