fix wb templates

--- a/ereuse_devicehub/templates/workbench/wbSettings_ESE.ini
+++ b/ereuse_devicehub/templates/workbench/wbSettings_ESE.ini
@@ -11,6 +11,7 @@ WB_STRESS_TEST = 0
 WB_SMART_TEST = short
 
 WB_ERASE = EraseSectors
+WB_ERASE_LEADING_ZEROS = True
 
 #WB_ERASE_CONFIRMATION = True
 
