--- a/examples/env.example
+++ b/examples/env.example
@@ -2,3 +2,9 @@ DB_USER='dhub'
 DB_PASSWORD='ereuse'
 DB_HOST='localhost'
 DB_DATABASE='devicehub'
+API_DLT='http://$IP_API_DLT'
+API_DLT_TOKEN=$TOKEN
+API_RESOLVER='http://$IP_API_RESOLVER'
+ID_FEDERATED='DH12'
+URL_MANUALS='http://$IP_MANUALS'
+
