add basic dockerization to devicehub dpp

--- a/examples/env.example
+++ b/examples/env.example
@@ -5,6 +5,24 @@ DB_DATABASE='devicehub'
 API_DLT='http://$IP_API_DLT'
 API_DLT_TOKEN=$TOKEN
 API_RESOLVER='http://$IP_API_RESOLVER'
-ID_FEDERATED='DH12'
+# TODO this should be guessed by DEVICEHUB_HOST, and avoid hardcode of ID_FEDERATED
+ID_FEDERATED='$ID'
 URL_MANUALS='http://$IP_MANUALS'
 
+DEVICEHUB_HOST='http://devicehub.example.com'
+HOST='localhost'
+
+SCHEMA='dbtest'
+DB_SCHEMA='dbtest'
+
+EMAIL_DEMO='user@example.org'
+PASSWORD_DEMO='changeme'
+
+JWT_PASS='changeme'
+SECRET_KEY='changeme'
+
+# important to import snapshots (step 15)
+#   rel path starts with ./
+#SNAPSHOTS_PATH='./relpath/to/snapshots'
+#   full path starts with /
+SNAPSHOTS_PATH='/fullpath/to/snapshots'
