reorder env vars in entrypoint for coherence

--- a/examples/env.example
+++ b/examples/env.example
@@ -3,7 +3,7 @@ DB_PASSWORD='ereuse'
 DB_HOST='localhost'
 DB_DATABASE='devicehub'
 API_DLT='http://$IP_API_DLT'
-API_DLT_TOKEN=$TOKEN
+API_DLT_TOKEN='$TOKEN'
 API_RESOLVER='http://$IP_API_RESOLVER'
 # TODO this should be guessed by DEVICEHUB_HOST, and avoid hardcode of ID_FEDERATED
 ID_FEDERATED='$ID'
