automate OIDC setup for devicehub server & client

--- a/examples/env.example
+++ b/examples/env.example
@@ -9,7 +9,10 @@ API_RESOLVER='http://$IP_API_RESOLVER'
 ID_FEDERATED='$ID'
 URL_MANUALS='http://$IP_MANUALS'
 
-DEVICEHUB_HOST='http://devicehub.example.com'
+SERVER_ID_DEVICEHUB_HOST='http://devicehub-server-id.example.com'
+CLIENT_ID_DEVICEHUB_HOST='http://devicehub-client-id.example.com'
+SERVER_ID_SERVICE='server_id'
+CLIENT_ID_SERVICE='client_id'
 HOST='localhost'
 
 SCHEMA='dbtest'
