--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - DB_HOST=postgres-id-server
       - DB_DATABASE=${DB_DATABASE}
       - HOST=${HOST}
-      - EMAIL_DEMO=${EMAIL_DEMO}
+      - EMAIL_DEMO=user5000@dhub.com
       - PASSWORD_DEMO=${PASSWORD_DEMO}
       - JWT_PASS=${JWT_PASS}
       - SECRET_KEY=${SECRET_KEY}
@@ -53,7 +53,7 @@ services:
       - DB_HOST=postgres-id-client
       - DB_DATABASE=${DB_DATABASE}
       - HOST=${HOST}
-      - EMAIL_DEMO=${EMAIL_DEMO}
+      - EMAIL_DEMO=user5001@dhub.com
       - PASSWORD_DEMO=${PASSWORD_DEMO}
       - JWT_PASS=${JWT_PASS}
       - SECRET_KEY=${SECRET_KEY}
