update env.example: we need real reachable URLs
specially for the OIDC demo

--- a/examples/env.example
+++ b/examples/env.example
@@ -9,8 +9,10 @@ API_RESOLVER='http://$IP_API_RESOLVER'
 ID_FEDERATED='$ID'
 URL_MANUALS='http://$IP_MANUALS'
 
-SERVER_ID_DEVICEHUB_HOST='http://devicehub-server-id.example.com'
-CLIENT_ID_DEVICEHUB_HOST='http://devicehub-client-id.example.com'
+#SERVER_ID_DEVICEHUB_HOST='http://devicehub-server-id.example.com'
+SERVER_ID_DEVICEHUB_HOST='http://localhost:5000'
+#CLIENT_ID_DEVICEHUB_HOST='http://devicehub-client-id.example.com'
+CLIENT_ID_DEVICEHUB_HOST='http://localhost:5001'
 SERVER_ID_SERVICE='server_id'
 CLIENT_ID_SERVICE='client_id'
 HOST='localhost'
