--- a/examples/env.example
+++ b/examples/env.example
@@ -2,6 +2,7 @@ DB_USER='dhub'
 DB_PASSWORD='ereuse'
 DB_HOST='localhost'
 DB_DATABASE='devicehub'
+SECRET_KEY='aaaa'
 API_DLT='http://$IP_API_DLT'
 API_DLT_TOKEN=$TOKEN
 API_RESOLVER='http://$IP_API_RESOLVER'
