change the examples files

--- a/examples/env.example
+++ b/examples/env.example
@@ -2,6 +2,7 @@
 API_DLT='http://$IP_API_DLT'
 API_DLT_TOKEN=$TOKEN
 API_RESOLVER='http://$IP_API_RESOLVER'
+# you might change or register ID_FEDERATED if you change DEVICEHUB_HOST
 ID_FEDERATED='DH12'
 
 # Database Variables
@@ -15,7 +16,6 @@ DB_SCHEMA='dbtest'
 # TODO this should be guessed by DEVICEHUB_HOST, and avoid hardcode of ID_FEDERATED
 SERVER_ID_FEDERATED='DH12'
 CLIENT_ID_FEDERATED='DH20'
-URL_MANUALS='http://localhost:4000'
 
 #SERVER_ID_DEVICEHUB_HOST='http://devicehub-server-id.example.com'
 SERVER_ID_DEVICEHUB_HOST='http://localhost:5000'
@@ -36,3 +36,6 @@ SECRET_KEY='aaaa'
 #SNAPSHOTS_PATH='./relpath/to/snapshots'
 #   full path starts with /
 SNAPSHOTS_PATH='/tmp/dhub_docker/snapshots'
+
+# If you have a URL_MANUALS implementation, please change this url
+URL_MANUALS='http://localhost:4000'
