--- a/examples/env.example
+++ b/examples/env.example
@@ -4,6 +4,9 @@ API_DLT_TOKEN=$TOKEN
 API_RESOLVER='http://$IP_API_RESOLVER'
 # you might change or register ID_FEDERATED if you change DEVICEHUB_HOST
 ID_FEDERATED='DH12'
+# TODO this should be guessed by DEVICEHUB_HOST, and avoid hardcode of ID_FEDERATED
+SERVER_ID_FEDERATED='DH12'
+CLIENT_ID_FEDERATED='DH20'
 
 # Database Variables
 DB_USER='dhub'
@@ -13,10 +16,7 @@ DB_DATABASE='dpp'
 SCHEMA='dbtest'
 DB_SCHEMA='dbtest'
 
-# TODO this should be guessed by DEVICEHUB_HOST, and avoid hardcode of ID_FEDERATED
-SERVER_ID_FEDERATED='DH12'
-CLIENT_ID_FEDERATED='DH20'
-
+DEVICEHUB_HOST='http://localhost:5000'
 #SERVER_ID_DEVICEHUB_HOST='http://devicehub-server-id.example.com'
 SERVER_ID_DEVICEHUB_HOST='http://localhost:5000'
 #CLIENT_ID_DEVICEHUB_HOST='http://devicehub-client-id.example.com'
@@ -26,6 +26,8 @@ CLIENT_ID_SERVICE='client_id'
 HOST='localhost'
 
 EMAIL_DEMO='user@example.com'
+SERVER_ID_EMAIL_DEMO='user5000@example.com'
+CLIENT_ID_EMAIL_DEMO='user5001@example.com'
 PASSWORD_DEMO='1234'
 
 JWT_PASS='aaaa'
@@ -33,9 +35,10 @@ SECRET_KEY='aaaa'
 
 # important to import snapshots (step 15)
 #   rel path starts with ./
-#SNAPSHOTS_PATH='./relpath/to/snapshots'
+SNAPSHOTS_PATH='./examples/snapshots'
 #   full path starts with /
-SNAPSHOTS_PATH='/tmp/dhub_docker/snapshots'
+#SNAPSHOTS_PATH='/tmp/dhub_docker/snapshots'
+IMPORT_SNAPSHOTS='y'
 
 # If you have a URL_MANUALS implementation, please change this url
 URL_MANUALS='http://localhost:4000'
