dc.yml: update docker images

--- a/docker-compose_devicehub-dpp.yml
+++ b/docker-compose_devicehub-dpp.yml
@@ -3,7 +3,7 @@ services:
 
   devicehub-id-server:
     init: true
-    image: dkr-dsg.ac.upc.edu/ereuse/devicehub:dpp__285635b7
+    image: dkr-dsg.ac.upc.edu/ereuse/devicehub:dpp__bcb4c696
     environment:
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
@@ -31,7 +31,7 @@ services:
       - shared:/shared:rw
 
   postgres-id-server:
-    image: dkr-dsg.ac.upc.edu/ereuse/postgres:dpp__285635b7
+    image: dkr-dsg.ac.upc.edu/ereuse/postgres:dpp__bcb4c696
     # 4. To create the database.
     # 5. Give permissions to the corresponding users in the database.
     #   extra src https://github.com/docker-library/docs/blob/master/postgres/README.md#environment-variables
@@ -48,7 +48,7 @@ services:
 
   devicehub-id-client:
     init: true
-    image: dkr-dsg.ac.upc.edu/ereuse/devicehub:dpp__285635b7
+    image: dkr-dsg.ac.upc.edu/ereuse/devicehub:dpp__bcb4c696
     environment:
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
@@ -76,7 +76,7 @@ services:
       - shared:/shared:ro
 
   postgres-id-client:
-    image: dkr-dsg.ac.upc.edu/ereuse/postgres:dpp__285635b7
+    image: dkr-dsg.ac.upc.edu/ereuse/postgres:dpp__bcb4c696
     # 4. To create the database.
     # 5. Give permissions to the corresponding users in the database.
     #   extra src https://github.com/docker-library/docs/blob/master/postgres/README.md#environment-variables
