--- a/docker-compose_devicehub.yml
+++ b/docker-compose_devicehub.yml
@@ -3,7 +3,7 @@ services:
 
   devicehub:
     init: true
-    image: dkr-dsg.ac.upc.edu/ereuse/devicehub:dpp__285635b7
+    image: dkr-dsg.ac.upc.edu/ereuse/devicehub:dpp__bcb4c696
     environment:
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
@@ -26,7 +26,7 @@ services:
       - shared:/shared:rw
 
   postgres:
-    image: dkr-dsg.ac.upc.edu/ereuse/postgres:dpp__285635b7
+    image: dkr-dsg.ac.upc.edu/ereuse/postgres:dpp__bcb4c696
     # 4. To create the database.
     # 5. Give permissions to the corresponding users in the database.
     #   extra src https://github.com/docker-library/docs/blob/master/postgres/README.md#environment-variables
