env.example: new DEPLOYMENT var

--- a/examples/env.example
+++ b/examples/env.example
@@ -42,3 +42,7 @@ IMPORT_SNAPSHOTS='y'
 
 # If you have a URL_MANUALS implementation, please change this url
 URL_MANUALS='http://localhost:4000'
+
+# on devicehub without dpp case, uncomment for a production deployment.
+#   That is, use of gunicorn instead of a debug python server
+#DEPLOYMENT='PROD'
