add docker support

--- a/examples/env.example
+++ b/examples/env.example
@@ -1,4 +1,23 @@
+# Uncomment for a production deployment.
+#   That is, use of gunicorn instead of a debug python server
+#DEPLOYMENT='PROD'
+
+# Database Variables
 DB_USER='dhub'
 DB_PASSWORD='ereuse'
 DB_HOST='localhost'
 DB_DATABASE='devicehub'
+SCHEMA='dbtest'
+DB_SCHEMA='dbtest'
+
+DEVICEHUB_HOST='http://localhost:5000'
+HOST='localhost'
+
+EMAIL_DEMO='user@example.com'
+PASSWORD_DEMO='1234'
+
+JWT_PASS='aaaa'
+SECRET_KEY='aaaa'
+
+# If you have a URL_MANUALS implementation, please change this url
+URL_MANUALS='http://localhost:4000'
