--- a/examples/env.example
+++ b/examples/env.example
@@ -9,6 +9,8 @@ DB_HOST='localhost'
 DB_DATABASE='devicehub'
 SCHEMA='dbtest'
 DB_SCHEMA='dbtest'
+DEPLOYMENT='DEV'
+FLASK_DEBUG='True'
 
 DEVICEHUB_HOST='http://localhost:5000'
 HOST='localhost'
