docker: IMPORT_SNAPSHOTS: change default to no

--- a/examples/env.example
+++ b/examples/env.example
@@ -38,7 +38,8 @@ SECRET_KEY='aaaa'
 SNAPSHOTS_PATH='./examples/snapshots'
 #   full path starts with /
 #SNAPSHOTS_PATH='/tmp/dhub_docker/snapshots'
-IMPORT_SNAPSHOTS='y'
+# be conservative to not upload wrong snapshots to the DLT
+IMPORT_SNAPSHOTS='n'
 
 # If you have a URL_MANUALS implementation, please change this url
 URL_MANUALS='http://localhost:4000'
