fix readme and env.example

--- a/examples/env.example
+++ b/examples/env.example
@@ -2,6 +2,9 @@
 API_DLT='http://$IP_API_DLT'
 API_DLT_TOKEN=$TOKEN
 API_RESOLVER='http://$IP_API_RESOLVER'
+ABAC_TOKEN=$ABAC_TOKEN
+ABAC_USER=$ABAC_USER
+ABAC_URL=$ABAC_URL
 # you might change or register ID_FEDERATED if you change DEVICEHUB_HOST
 ID_FEDERATED='DH12'
 # TODO this should be guessed by DEVICEHUB_HOST, and avoid hardcode of ID_FEDERATED
